--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+h1 {
+  @apply font-semibold text-5xl;
+}
+
+/* Animations */
+
+.fade-enter-active {
+  transition: all .5s ease;
+}
+.fade-leave-active {
+  transition: all .5s ease;
+}
+.fade-enter-from, .fade-leave-to {
+  opacity: 0;
+}
