--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -2,9 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
 
 h1 {
   @apply font-semibold text-5xl;
+}
+
+h2 {
+  @apply font-semibold text-4xl;
+}
+
+.wrapper {
+  ul {
+    list-style-type: '- ';
+  }
 }
 
 /* Animations */
