--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -14,6 +14,10 @@ h2 {
   @apply font-semibold text-4xl;
 }
 
+h3 {
+  @apply font-semibold text-2xl;
+}
+
 .wrapper {
   ul {
     list-style-type: '- ';
