--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -21,6 +21,12 @@ h3 {
 .wrapper {
   ul {
     list-style-type: '- ';
+    list-style-position: inside;
+
+    li {
+      padding-left: 1em;
+      text-indent: -1em;
+    }
   }
 }
 
